Connect navbar, create 'student create' component

--- a/src/app/Pages/Partials/navbar/navbar.component.html
+++ b/src/app/Pages/Partials/navbar/navbar.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
+<nav class="navbar navbar-expand-lg bg-white shadow">
+    <div class="container">
 
       <a class="navbar-brand"routerLink="/">Angular CRUD</a>
 
@@ -8,7 +8,7 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link active" routerLink="/">Home</a>
           </li>
