Added student/create routing.

--- a/src/app/Pages/student-create/student-create.component.html
+++ b/src/app/Pages/student-create/student-create.component.html
@@ -1,1 +1,9 @@
-<p>student-create works!</p>
+<div>
+    <div class="container mt-5">
+        <div class="card-hander">
+            <h4>
+                <a routerLink="/" class="btn btn-danget floaty-end">Back</a>
+            </h4>
+        </div>
+    </div>
+</div>
