--- a/src/app/Pages/student-create/student-create.component.html
+++ b/src/app/Pages/student-create/student-create.component.html
@@ -1,9 +1,16 @@
 <div>
     <div class="container mt-5">
-        <div class="card-hander">
-            <h4>
-                <a routerLink="/" class="btn btn-danget floaty-end">Back</a>
-            </h4>
+        <div class="card">
+            <div class="card-hander">
+                <h4>Student Create
+                    <a routerLink="/" class="btn btn-danger float-end">Back</a>
+                </h4>
+            </div>
+            <div class="card-body">
+                <h4>
+    
+                </h4>
+            </div>
         </div>
     </div>
 </div>
