--- a/src/app/Pages/student-create/student-create.component.html
+++ b/src/app/Pages/student-create/student-create.component.html
@@ -7,9 +7,28 @@
                 </h4>
             </div>
             <div class="card-body">
-                <h4>
-    
-                </h4>
+                <form (ngSubmit)="saveStudent()">
+                    
+                    <div class="mb-3">
+                        <label>Name</label>
+                        <input type="text" [(ngModel)]="name" name="name" class="form-control"/>
+                    </div>
+                    <div class="mb-3">
+                        <label>Course</label>
+                        <input type="text" [(ngModel)]="course" name="course" class="form-control"/>
+                    </div>
+                    <div class="mb-3">
+                        <label>Email</label>
+                        <input type="text" [(ngModel)]="email" name="email" class="form-control"/>
+                    </div>
+                    <div class="mb-3">
+                        <label>Phone</label>
+                        <input type="text" [(ngModel)]="phone" name="phone" class="form-control"/>
+                    </div>
+                    <div class="mb-3">
+                        <button type="submit" class="vtn vtn-primary">Save</button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
