--- a/src/app/Pages/student-create/student-create.component.html
+++ b/src/app/Pages/student-create/student-create.component.html
@@ -7,28 +7,44 @@
                 </h4>
             </div>
             <div class="card-body">
-                <form (ngSubmit)="saveStudent()">
+
+                <div *ngIf="isLoading; else elseForm">
+                    <app-loader :title=""loadingTitle/>
+                </div>
+                <ng-template #elseForm>
+
+                    <form (ngSubmit)="saveStudent()">
                     
                     <div class="mb-3">
                         <label>Name</label>
                         <input type="text" [(ngModel)]="name" name="name" class="form-control"/>
+                        <span *ngIf="errors.name" class="text-danger">{{errors.name}}</span>
                     </div>
+
                     <div class="mb-3">
                         <label>Course</label>
                         <input type="text" [(ngModel)]="course" name="course" class="form-control"/>
+                        <span *ngIf="errors.course" class="text-danger">{{errors.course}}</span>
                     </div>
+
                     <div class="mb-3">
                         <label>Email</label>
                         <input type="text" [(ngModel)]="email" name="email" class="form-control"/>
+                        <span *ngIf="errors.email" class="text-danger">{{errors.email}}</span>
                     </div>
+
                     <div class="mb-3">
                         <label>Phone</label>
                         <input type="text" [(ngModel)]="phone" name="phone" class="form-control"/>
+                        <span *ngIf="errors.phone" class="text-danger">{{errors.phone}}</span>
                     </div>
+
                     <div class="mb-3">
-                        <button type="submit" class="vtn vtn-primary">Save</button>
+                        <button type="submit" class="btn btn-primary">Save</button>
                     </div>
-                </form>
+
+                    </form>
+                </ng-template>
             </div>
         </div>
     </div>
