--- a/src/app/Pages/student-create/student-create.component.html
+++ b/src/app/Pages/student-create/student-create.component.html
@@ -9,7 +9,7 @@
             <div class="card-body">
 
                 <div *ngIf="isLoading; else elseForm">
-                    <app-loader :title=""loadingTitle/>
+                    <app-loader :title="loadingTitle"/>
                 </div>
                 <ng-template #elseForm>
 
