--- a/src/app/Pages/student-page/student-page.component.html
+++ b/src/app/Pages/student-page/student-page.component.html
@@ -1,1 +1,36 @@
-<p>student-page works!</p>
+<div>
+
+    <div class="mt -5 container">
+        <div class="card">
+            <div class="card-header">
+                <h4>Students Lists
+                    <a routerLink="/students/create" class="btn btn-primary float-end">Add Student</a>
+                </h4>
+            </div>
+            
+            <div class="card-body">
+                
+                <table class="table tabl-striped table-bordered">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Name</th>
+                            <th>Course</th>
+                            <th>Email</th>
+                            <th>Phone</th>
+                            <th>Created At</th>
+                            <th>Action</th>
+                            
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
+        </div>
+    </div>
+</div>
