--- a/src/app/Pages/student-page/student-page.component.html
+++ b/src/app/Pages/student-page/student-page.component.html
@@ -1,10 +1,10 @@
 <div>
 
-    <div class="mt -5 container">
+    <div class="mt-5 container">
         <div class="card">
             <div class="card-header">
                 <h4>Students Lists
-                    <a routerLink="/students/create" class="btn btn-primary float-end">Add Student</a>
+                    <a routerLink="/student/create" class="btn btn-primary float-end">Add Student</a>
                 </h4>
             </div>
             
