--- a/src/app/Pages/Partials/navbar/navbar.component.html
+++ b/src/app/Pages/Partials/navbar/navbar.component.html
@@ -9,14 +9,21 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+
           <li class="nav-item">
             <a class="nav-link active" routerLink="/">Home</a>
           </li>
+
           <li class="nav-item">
             <a class="nav-link" routerLink="/about-us">About Us</a>
           </li>
+
           <li class="nav-item">
             <a class="nav-link" routerLink="/contact-us">Contact Us</a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/students">Students</a>
           </li>
         </ul>
       </div>
